--- a/public/css/estiloAdmin.css
+++ b/public/css/estiloAdmin.css
@@ -33,3 +33,7 @@ body {
     background-color:#212529 !important; 
     color: white !important; 
 }
+
+.contenerdor-tabla{
+    overflow-x: auto;
+}
